# Facts-CLI

./: .env.example  .gitignore  README.md  auth.py  facts.py  langgraph.json  main.py  pyproject.toml  session_store.py  styles.tcss  tui.py
app/: agent.py  auth.py  cli.py  fact_handler.py  facts.py  langgraph_agent.py  schema.py  session_store.py
conf/: database.py  env.py
migrations/: env.py
migrations/versions/: 914b45893bc6_user_facts_added.py  a762a07b300a_user_id_added_to_facts_table.py  d1ff1e3595ac_initial_tables.py
models/: __init__.py  fact.py  session_token.py  user.py  user_fact.py
screens/: add_fact.py  login.py  menu.py  show_fact.py  signup.py
styles/: app.tcss
