[project]
name = "facts"
version = "0.1.0"
description = "A CLI app that tells you facts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "keyring[cryptfile]>=25.6.0",
    "keyrings-cryptfile>=1.3.9",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "textual>=6.6.0",
    "typer>=0.20.0",
]
