[project]
name = "facts"
version = "0.1.0"
description = "A CLI app that tells you facts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "keyring>=25.6.0",
    "keyrings-cryptfile>=1.3.9",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "textual>=6.6.0",
    "typer>=0.20.0",
]
